--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ a:hover {
 					<header id="header">
 						<h1>Nanang Kasim</h1>
 						
-						<h3>Data & AI A Enthusiast</h3>
+						<h3>Data & AI Enthusiast</h3>
                         <nav>
 							<ul>
 								<li><a href="index.html" class="icon fa-home"><span class="label">Email</span></a></li>
